bitfield/tests/09-variant-out-of-range.stderr
error[E0277]: the trait bound `False: DiscriminantInRange` is not satisfied
  --> tests/09-variant-out-of-range.rs:8:10
   |
8  | #[derive(BitfieldSpecifier)]
   |          ^^^^^^^^^^^^^^^^^ the trait `DiscriminantInRange` is not implemented for `False`
   |
   = help: the trait `DiscriminantInRange` is implemented for `True`
note: required by a bound in `_assert_discriminant_in_range_for_deliverymode_external`
  --> tests/09-variant-out-of-range.rs:8:10
   |
8  | #[derive(BitfieldSpecifier)]
   |          ^^^^^^^^^^^^^^^^^ required by this bound in `_assert_discriminant_in_range_for_deliverymode_external`
...
17 |     External,
   |     -------- required by a bound in this function
   = note: this error originates in the derive macro `BitfieldSpecifier` (in Nightly builds, run with -Z macro-backtrace for more info)
